mobile join card removed

--- a/src/components/ui/JoinCard/JoinCard.module.scss
+++ b/src/components/ui/JoinCard/JoinCard.module.scss
@@ -127,6 +127,8 @@
     width: 90vw;
     position: absolute;
     top: -10px;
+    background-color: transparent;
+    box-shadow: none;
 
     .inputWrapper {
       width: 100%;
