--- a/src/views/CreateSession/CreateSession.module.scss
+++ b/src/views/CreateSession/CreateSession.module.scss
@@ -14,4 +14,13 @@
   height: 500px;
   width: 500px;
   background-color: $blue-vibrant;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotate(90deg);
+
+  @media(max-width: $phablet){
+    width: 300px;
+    height: 300px;
+  }
 }
