join card updated2

--- a/src/components/ui/JoinCard/JoinCard.module.scss
+++ b/src/components/ui/JoinCard/JoinCard.module.scss
@@ -55,10 +55,10 @@
       z-index: 10;
       border: 3px solid transparent;
       background-color: transparent;
-      // border-bottom: 2px solid white;
+      border-bottom: 2px solid white;
       // box-shadow: $flareShadowSm2;
 
-      box-shadow: 0px -3px 27px 3px #dd0afe38, 7px 9px 25px 2px #6e2dff52;
+      // box-shadow: 0px -3px 27px 3px #dd0afe38, 7px 9px 25px 2px #6e2dff52;
       font-family: 'Rajdhani', sans-serif;
       color: white;
     }
